--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-		<title>PPopina</title>
+		<title>Popina-System</title>
 		<!--esse aqui é para chamar o css-->
 		<link rel="stylesheet" href="css/css.css" type="text/css">
 </head>
 <body>
-	<header></header>
+	<br>
+	<br>
+	<br>
+	<br>
+	<header>
+	</header>
 	<nav></nav>
-	<section></section>
+	<section>
+		<a href= "html/venda.php">Nova Venda</a>
+		<br>
+		<br>
+		<a href= "html/cadastro_produto.php">Cadastrar Produto</a>
+		<br>
+		<br>
+		<a href="html/listar_dividas">Clientes</a>
+	</section>
 	<footer></footer>
 </body>
 </html>
