--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!Doctype html>
 <html lang="pt-br">
+
 <head>
-	<meta charset="utf-8">
-		<title>Popina-System</title>
-		<!--esse aqui é para chamar o css-->
-		<link rel="stylesheet" href="css/css.css" type="text/css">
+    <meta charset="utf-8">
+    <title>Popina-System</title>
+    <!--esse aqui é para chamar o css-->
+    <link rel="stylesheet" href="css/css.css" type="text/css">
 </head>
+
 <body>
-	<br>
-	<br>
-	<br>
-	<br>
-	<header>
-	</header>
-	<nav></nav>
-	<section>
-		<a href= "html/venda.php">Nova Venda</a>
-		<br>
-		<br>
-		<a href= "html/cadastro_produto.php">Cadastrar Produto</a>
-		<br>
-		<br>
-		<a href="html/listar_dividas">Clientes</a>
-	</section>
-	<footer></footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <header>
+    </header>
+    <nav></nav>
+    <section>
+        <a href="html/venda.php">Nova Venda</a>
+        <br>
+        <br>
+        <a href="html/cadastro_produto.php">Cadastrar Produto</a>
+        <br>
+        <br>
+        <a href="html/clientes.php">Clientes</a>
+    </section>
+    <footer></footer>
 </body>
+
 </html>
